<resources>
    <string name="app_name">First Steps</string>
    <string name="action_settings">Settings</string>
    <string name="action_addChild">New Child</string>

    <!-- Recycler View-->
    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="activity">Add User</string>
    <string name="descriptions">You are able to add your users here</string>

    <!-- Add Child Hint Strings -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>gender
    <string name="gender">Gender</string>
    <string name="Submit">Submit</string>
    <string name="MoreInfo">Add more Information</string>
    <string name="Height">Height in meters (m)</string>
    <string name="Weight">Weight in kilograms (kg)</string>
    <string name="location">Address Location</string>
    <string name="Allergies">Allergies</string>
    <string name="Allergies_eg">For Example - Dust, Smoke </string>
    <string name="vaccinations">Select Vaccinations</string>
    <string name="parentName">"Parent(s) Name"</string>
    <string name="parent">Parent/Guardian</string>
    <string name="HealthWorker">Health Worker</string>
    <string name="parentNo">Parent Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sh_first_name">Jerry</string>
    <string name="sh_last_name">Markinson</string>gender
    <string name="age_det">"Age: "</string>
    <string name="sh_gender">Male</string>
    <string name="gender_det">"Gender: "</string>
    <string name="sh_dOB">"23/1/2015"</string>
    <string name="sh_MoreInfo">More Information</string>

    <!-- Login Layout Strings -->
    <string name="usernameHint">"Username"</string>
    <string name="passwordHint">"Password</string>
    <string name="confirmPasswordHint">"Confirm Password"</string>
    <string name="emailHint">"Email Address"</string>
    <string name="phoneNoHint">"Phone Number"</string>
    <string name="welcomeUser">Welcome</string>
    <string name="firstTimeLogin">First Time Login</string>
    <string name="error_field_confirmed_required">Passwords dont Match</string>
    <string name="error_field_required">This field is required!</string>
    <string name="error_field__phone_required">Enter ValidPhone Number!</string>
    <string name="error_invalid_password">Password is too short!</string>
    <string name="error_invalid_usernane">Username Required</string>
    <string name="error_invalid_email">Email not Valid</string>
    <string name="showDateDialog">" Click to Set Date of Birth! "</string>
    <string name="dOBa">Select Date of Birth : </string>
    <string name="loginUser">Login</string>
    <string name="role">"are you are Doctor?"</string>

    <!-- Add Child Strings -->
    <string name="firstName_add">"Enter First Name"</string>
    <string name="lastName_add">"Enter Last Name</string>
    <string name="gender_add">"Enter Gender"</string>
    <string name="dOB_add">"Select Date of Birth"</string>
    <string name="weight">Weight</string>
    <string name="infoTitle">Title</string>
    <string name="infoDetails">Information Details</string>

    <!-- Spinner -->
    <string name="gender_prompt">Select Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string name="alert_dialog_two_buttons_title">More Information</string>
    <string name="alert_dialog_ok">Submit</string>
    <string name="alert_dialog_cancel">Cancel</string>


    <string name="error_info_title">Enter Info Title</string>
    <string name="error_info_details">Enter Info Details</string>

    <!-- Spinner information -->
    <string name="information_prompt">Select Information or Input Information Title</string>
    <string-array name="installed_information">
        <item>Select Information or Input Information Title</item>
        <item>Genotype</item>
        <item>Blood Group</item>
        <item>Health Condition</item>
    </string-array>

    <string-array name="syncFrequency">
        <item name="1">Once a day</item>
        <item name="7">Once a week</item>
        <item name="3">Once a year</item>
        <item name="0">Never (Update maually)</item>
    </string-array>
    <string-array name="syncFrequencyValues">
        <item name="1">1</item>
        <item name="7">7</item>
        <item name="30">30</item>
        <item name="0">0</item>
    </string-array>

    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>

    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <!-- Vaccinations-->
    <string name="vaccination1">"Hepatitis B (HepB)"</string>
    <string name="vaccination2">"Rotavirus (RV) RV1, RV5"</string>
    <string name="vaccination3">"Diphtheria, tetanus and acellular pertussis"</string>
    <string name="vaccination4">"Haemophilus Influenzae type b (HIb)"</string>
    <string name="vaccination5">"Pneumococcal conjugate (PCV13)"</string>
    <string name="vaccination6">"Inactivated Poliovirus (IPV)"</string>
    <string name="vaccination7">"Influenza (IIV; LAIV)"</string>
    <string name="vaccination8">"Measles,Chicken Pox, mumps, rubella (MMR)"</string>
    <string name="vaccination9">"Varicella (VAR)"</string>
    <string name="vaccination10">"Hepatitis A (HepA)"</string>
    <string name="vaccination11">"Yellow Fever"</string>
    <string name="saveVaccinations">Save</string>


    <!-- Array Vaccinations -->
    <string-array name="vaccinations">
        <item>"(BCG) Bacillus Calmette-Guerin vaccine"</item>
        <item>"(OPV) Oral polio vaccine"</item>
        <item>"(Hep B) Hepatitis B"</item>
        <item>"Yellow Fever"</item>
        <item>"Penta-1 (Hib+DTP+Hep B)"</item>
        <item>"Rota – Rotavirus vaccine"</item>
        <item>"Hepatitis A (HepA)"</item>
        <item>"Haemophilus Influenza type b (HIb)"</item>
        <item>"PCV13 – 13-valent Pneumococcal conjugate vaccine"</item>
        <item>"Vit A – Vitamin A"</item>
        <item>"DTaP – Diptheria, Tetanus and acellular Pertussis vaccine"</item>
        <item>"Var - Varicella vaccine"</item>
        <item>"MMRV - Measles, Mumps, Rubella and Varicella vaccine"</item>
        <item>MMR – Measles, Mumps and Rubella vaccine</item>
        <item>"Men A &amp; C – Meningococcal ACYW135 conjugate vaccine"</item>
        <item>"Tdap – Infant dose of Tetanus and smaller doses of Diphtheria and acellular Pertussis vaccine"</item>
        <item>"HPV – Human papiloma virus vaccine"</item>
        <item>"TT – Tetanus toxoid vaccine"</item>
    </string-array>
    <string-array name="vaccination_period">
        <item>0 month</item>
        <item>6 weeks</item>
        <item>10 weeks</item>
        <item>6 months</item>
        <item>9 months</item>
        <item>12 months</item>
        <item>15 months</item>
        <item>18 months</item>
        <item>2 years</item>
        <item>5 years</item>
    </string-array>
    <!-- Form view -->
    <string name="genders">Gender:     </string>
    <string name="dateOfb">Date of Birth: </string>

    <string name="form_height">Height: </string>
    <string name="form_weight">Weight: </string>
    <string name="form_address">Address: </string>
    <string name="form_allergies">Allergies: </string>
    <string name="form_parents">Parents Name: </string>


    <!-- schedules -->
    <string name="setAppointmentDoctor">"Doctor's Appointment"</string>
    <string name="vacinatio">Vaccinations</string>
</resources>
