<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    tools:context="com.example.jil.myproject_prototype2sqlite.fragment_one"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- First name EditText -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETFName"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:layout_width="match_parent">
            </EditText>

        </android.support.design.widget.TextInputLayout>

        <!-- Last name EditText -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETLName"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:layout_width="match_parent">
            </EditText>

        </android.support.design.widget.TextInputLayout>

        <!-- Gender EditText -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ETgender"
                android:layout_height="wrap_content"
                android:hint="@string/gender"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:layout_width="match_parent">
            </EditText>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/lblDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="Current Date (M-D-YYYY): "
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <!-- Date Picker -->
        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/datePicker"
            android:yearListSelectorColor="#000"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Submit button -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Submit"
                android:textColor="#FFF"
                android:id="@+id/btnSubmit"
                android:background="#1976D2"
                android:layout_marginStart="10dp"/>

            <!-- Add more Information button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MoreInfo"
                android:layout_marginStart="50dp"
                android:textColor="#FFF"
                android:id="@+id/btnMoreInfo"
                android:background="#04af45"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>

