<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:popupTheme="@style/AppTheme.PopupOverlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarContainer"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarGreen"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_below="@+id/toolbarContainer"
        android:id="@+id/scrollView"
        tools:context="com.example.jil.myproject_prototype2sqlite.fragment_one"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- First name EditText -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ETFName"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:textSize="16sp"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent">
                </EditText>

            </android.support.design.widget.TextInputLayout>

            <!-- Last name EditText -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ETLName"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:textSize="16sp"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent">
                </EditText>

            </android.support.design.widget.TextInputLayout>

            <!-- Gender EditText -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ETgender"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:textSize="16sp"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent">
                </EditText>

           </android.support.design.widget.TextInputLayout>
            <!--
            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gender"

                android:prompt="@string/gender_prompt" />-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#165379"
                android:text="@string/dOBa"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/lblDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#165379"
                android:text=""
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!-- Date Picker -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showDateDialog"
                android:textColor="#FFF"
                android:background="@color/colorAccent"
                android:id="@+id/btnShowDate"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                />
            <!-- Submit Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Submit button -->
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Submit"
                    android:textColor="#FFF"
                    android:id="@+id/btnSubmit"
                    android:background="#1976D2"
                    android:layout_marginStart="10dp"/>

                <!-- Add more Information button -->
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/MoreInfo"
                    android:layout_marginStart="50dp"
                    android:textColor="#FFF"
                    android:id="@+id/btnMoreInfo"
                    android:background="#04af45"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>

